<resources>
    <string name="app_name">RPL Profil</string>
    <string name="bt1">1. Aditya Adi Nugroho - V3421003</string>
    <string name="bt2">2. Ahmad Bariq Fawwazi - V3421009</string>
    <string name="bt3">3. Alvian Richo Pratama - V3421012</string>
    <string name="bt4">4. Aulia Akbar Khoiruddin - V3421018</string>
    <string name="bt5">5. Daniel Febrian Sijabat - V3421031</string>
    <string name="bt6">6. Muhammad Raihan Khalifa - V3421051</string>
</resources>