<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="45dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_kelompok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="Kelompok 4"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="42sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_matkul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="Rekayasa Perangkat Lunak"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_kelas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="TI A - Semester 3"
        android:textColor="@color/material_dynamic_neutral30"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/bt1"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/bt2"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/bt3"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/bt4"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/bt5"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/bt6"
            android:textAlignment="textStart" />
    </LinearLayout>

</LinearLayout>